<resources>
    <string name="app_name">程序员计算器</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="init_text">0</string>
    <string name="hex_view_button">十六</string>
    <string name="dec_view_button">十</string>
    <string name="oct_view_button">八</string>
    <string name="bin_view_button">二</string>
    <string name="blank">  </string>
    <string name="bit_length_BYTE">8位</string>
    <string name="bit_length_WORD">16位</string>
    <string name="bit_length_DWORD">32位</string>
    <string name="bit_length_QWORD">64位</string>
    <string name="num_keyboard_button">数字键盘</string>
    <string name="bit_keyboard_button">位键盘</string>
    <string name="lsh_button">Lsh</string>
    <string name="rsh_button">Rsh</string>
    <string name="or_button">或</string>
    <string name="xor_button">异或</string>
    <string name="not_button">非</string>
    <string name="and_button">与</string>
    <string name="mod_button">模</string>
    <string name="set_0_button">置0</string>
    <string name="set_1_button">置1</string>
    <string name="ce_button">CE</string>
    <string name="clear_button">C</string>
    <string name="clear_one_button">←</string>
    <string name="divide_button">÷</string>
    <string name="mul_button">×</string>
    <string name="sub_button">－</string>
    <string name="add_button">＋</string>
    <string name="num_a_button">A</string>
    <string name="num_b_button">B</string>
    <string name="num_c_button">C</string>
    <string name="num_d_button">D</string>
    <string name="num_e_button">E</string>
    <string name="num_f_button">F</string>
    <string name="num_0_button">0</string>
    <string name="num_1_button">1</string>
    <string name="num_2_button">2</string>
    <string name="num_3_button">3</string>
    <string name="num_4_button">4</string>
    <string name="num_5_button">5</string>
    <string name="num_6_button">6</string>
    <string name="num_7_button">7</string>
    <string name="num_8_button">8</string>
    <string name="num_9_button">9</string>
    <string name="help_button">关于</string>
    <string name="bracket_left_button">(</string>
    <string name="bracket_right_button">)</string>
    <string name="opp_button">±</string>
    <string name="equal_button">=</string>
    <string name="bit_flag_60">0</string>
    <string name="bit_flag_56">0</string>
    <string name="bit_flag_52">0</string>
    <string name="bit_flag_48">0</string>
    <string name="bit_flag_44">0</string>
    <string name="bit_flag_40">0</string>
    <string name="bit_flag_36">0</string>
    <string name="bit_flag_32">0</string>
    <string name="bit_flag_28">0</string>
    <string name="bit_flag_24">0</string>
    <string name="bit_flag_20">0</string>
    <string name="bit_flag_16">0</string>
    <string name="bit_flag_12">0</string>
    <string name="bit_flag_8">0</string>
    <string name="bit_flag_4">0</string>
    <string name="bit_flag_0">0</string>
    <string name="error_of_divide">除数不能为零</string>
    <string name="error_of_mod">对零取模结果未定义</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="about_developer_title">关于开发者：</string>
    <string name="about_developer">开发者：幽灵王子SpectrePrince</string>
    <string name="Email">Email：youlingwangzi@outlook.com</string>
    <string name="sina_weibo">新浪微博：@幽灵王子SpectrePrince</string>
    <string name="tips_title">你知道吗？</string>
    <string name="tell_me">如果您在使用过程中遇到任何问题，欢迎通过邮箱微博联系我。感谢您的帮助。</string>
    <string name="check_new_button">检查更新</string>
    <string name="checking_new">正在检查更新</string>
    <string name="checked_updated">您的应用已是最新版</string>
    <string name="checked_no_network">没有网络，请检查您的网络设置</string>
    <string name="checked_no_server">与服务器通讯失败，请稍后再试</string>
    <string name="checked_error">检查更新出现问题，请稍后再试</string>
    <string name="checked_new_alert_message">程序员计算器有新版本，是否更新？</string>
    <string name="alert_update_yes_button">更新</string>
    <string name="cancel">取消</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_ad">AdActivity</string>
</resources>
